docs/certifications/CKA/15_Mock_Exams/KodeKloud_Mock_3/Q3_Multi-Pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: multi-pod
  name: multi-pod
spec:
  containers:
  - name: alpha
    image: nginx
  - command:
    - "/bin/sh"
    - "-c"
    - "sleep 4800"
    image: busybox
    name: beta
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
