docs/certifications/CKA/15_Mock_Exams/KodeKloud_Mock_3/Q5_NetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-to-nptest
spec:
  podSelector:
    matchLabels:
      run: np-test-1
  ingress:
  - ports:
    - port: 80
      protocol: TCP
  policyTypes:
  - Ingress
